--- a/util/build.gradle
+++ b/util/build.gradle
@@ -56,10 +56,13 @@ jar {
   into('META-INF/versions/9') {
     from sourceSets.java9.output
   }
+
+  String packages = 'org.bouncycastle.asn1.{bsi|cmc|cmp|cms|crmf|dvcs|eac|esf|ess|est|icao|isismtt|smime|tsp}.*'
+
   manifest.attributes('Multi-Release': 'true')
   manifest.attributes('Bundle-RequiredExecutionEnvironment': 'JavaSE-1.8')
-  manifest.attributes('Export-Package': 'org.bouncycastle.asn1.{bsi|cmc|cmp|cms|crmf|dvcs|eac|esf|ess|est|icao|isismtt|smime|tsp}.*;org.bouncycastle.oer.*')
-  manifest.attributes('Import-Package': 'java.*;resolution:=optional;javax.*;resolution:=optional;org.bouncycastle.*;version="[2.73,2.74)"')
+  manifest.attributes('Export-Package': "${packages},org.bouncycastle.oer.*")
+  manifest.attributes('Import-Package': "java.*;resolution:=optional,javax.*;resolution:=optional,!${packages},!org.bouncycastle.oer.*,org.bouncycastle.*;version=\"[2.73,2.74)\"")
 }
 
 task sourcesJar(type: Jar) {
