--- a/tls/build.gradle
+++ b/tls/build.gradle
@@ -67,7 +67,7 @@ jar {
   manifest.attributes('Multi-Release': 'true')
   manifest.attributes('Bundle-RequiredExecutionEnvironment': 'JavaSE-1.8')
   manifest.attributes('Export-Package': 'org.bouncycastle.{jsse|tls}.*')
-  manifest.attributes('Import-Package': 'java.*;resolution:=optional;javax.*;resolution:=optional;org.bouncycastle.*;version="[2.73,2.74)"')
+  manifest.attributes('Import-Package': 'java.*;resolution:=optional,javax.*;resolution:=optional,!org.bouncycastle.{jsse|tls}.*;org.bouncycastle.*;version="[2.73,2.74)"')
 }
 
 task sourcesJar(type: Jar) {
