--- a/gradle.properties
+++ b/gradle.properties
@@ -1,6 +1,6 @@
 org.gradle.java.installations.auto-detect=false
 org.gradle.java.installations.auto-download=false
-org.gradle.java.installations.fromEnv=LTS_JDK8,LTS_JDK11,LTS_JDK15
+org.gradle.java.installations.fromEnv=LTS_JDK8,LTS_JDK11,LTS_JDK15,LTS_JDK21
 version=2.73.7
 org.gradle.jvmargs=-Xmx2g
 org.gradle.parallel=false
