--- a/prov/build.gradle
+++ b/prov/build.gradle
@@ -34,6 +34,11 @@ sourceSets {
             srcDirs = ['src/main/jdk1.15']
         }
     }
+    java21 {
+        java {
+            srcDirs = ['src/main/jdk21']
+        }
+    }
 }
 
 dependencies {
@@ -49,6 +54,10 @@ dependencies {
   java15Implementation files([sourceSets.main.output.classesDirs, sourceSets.java9.output.classesDirs, sourceSets.java11.output.classesDirs]) {
      builtBy compileJava11Java
   }
+
+    java21Implementation files([sourceSets.main.output.classesDirs, sourceSets.java9.output.classesDirs, sourceSets.java11.output.classesDirs,sourceSets.java15.output.classesDirs]) {
+        builtBy compileJava15Java
+    }
 }
 
 compileJava {
@@ -78,6 +87,12 @@ compileJava15Java {
   }
 }
 
+compileJava21Java {
+    javaCompiler = javaToolchains.compilerFor {
+        languageVersion = JavaLanguageVersion.of(21)
+    }
+}
+
 
 jar {
   from sourceSets.main.output
@@ -90,6 +105,10 @@ jar {
   into('META-INF/versions/15') {
     from sourceSets.java15.output
   }
+  into('META-INF/versions/21') {
+    from sourceSets.java21.output
+  }
+
   manifest.attributes('Multi-Release': 'true')
   manifest.attributes('Bundle-RequiredExecutionEnvironment': 'JavaSE-1.8')
   manifest.attributes('Export-Package': 'org.bouncycastle.*')
