--- a/build.gradle
+++ b/build.gradle
@@ -171,7 +171,7 @@ subprojects {
         jvmArgs '-Dorg.bouncycastle.packet_cipher_enabled=false',
         '-Dorg.bouncycastle.expected_jvm=1.8',
         '-Dorg.bouncycastle.bks.enable_v1=true',
-        '-Dtest.bclts.ignore.native=es,gcmsiv',
+        '-Dtest.bclts.ignore.native=es,gcmsiv,slhdsa_sha256',
         '-Dorg.bouncycastle.native.cpu_variant=neon-le',
         '-Dorg.bouncycastle.test.skip_pc=true'
 
