--- a/mail/build.gradle
+++ b/mail/build.gradle
@@ -105,3 +105,9 @@ checkstyleMain {
     dependsOn(':util:jar')
     dependsOn(':pkix:jar')
 }
+
+compileTestJava {
+    dependsOn(":prov:jar")
+    dependsOn(":util:jar")
+    dependsOn(":pkix:jar")
+}
