--- a/pg/build.gradle
+++ b/pg/build.gradle
@@ -96,3 +96,8 @@ checkstyleMain {
     dependsOn(':prov:jar')
     dependsOn(':util:jar')
 }
+
+compileTestJava {
+    dependsOn(':prov:jar')
+    dependsOn(':util:jar')
+}
