--- a/pkix/build.gradle
+++ b/pkix/build.gradle
@@ -99,3 +99,8 @@ checkstyleMain {
     dependsOn(':prov:jar')
     dependsOn(':util:jar')
 }
+
+compileTestJava {
+    dependsOn(':prov:jar')
+    dependsOn(':util:jar')
+}
