--- a/tls/build.gradle
+++ b/tls/build.gradle
@@ -107,3 +107,8 @@ checkstyleMain {
   dependsOn(':prov:jar')
   dependsOn(':util:jar')
 }
+
+compileTestJava {
+  dependsOn(':prov:jar')
+  dependsOn(':util:jar')
+}
