--- a/pkix/build.gradle
+++ b/pkix/build.gradle
@@ -35,6 +35,8 @@ dependencies {
 
 compileJava {
     options.release = 8
+    dependsOn(':prov:jar')
+    dependsOn(':util:jar')
 }
 
 compileJava9Java {
