Compile tests at java 8 level. Updated benchmark README.md to reflect need to Java 21.

--- a/build.gradle
+++ b/build.gradle
@@ -492,6 +492,10 @@ subprojects {
         into new File(rootDir,"../bc-lts-java-jars/${project.version}/")
     }
 
+    compileTestJava {
+        options.release = 8
+    }
+
 }
 
 
