--- a/gradle.properties
+++ b/gradle.properties
@@ -2,6 +2,7 @@ org.gradle.java.installations.auto-detect=false
 org.gradle.java.installations.auto-download=false
 org.gradle.java.installations.fromEnv=LTS_JDK8,LTS_JDK11,LTS_JDK15,LTS_JDK21
 version=2.73.8-SNAPSHOT
+maxVersion=2.73.9
 org.gradle.jvmargs=-Xmx2g
 org.gradle.parallel=false
 
