--- a/pkix/build.gradle
+++ b/pkix/build.gradle
@@ -55,10 +55,20 @@ jar {
     }
     String packages = 'org.bouncycastle.{cert|cmc|cms|dvcs|eac|est|its|mime|mozilla|voms|operator|pkix|openssl|pkcs|tsp}.*'
 
+    String v = "${rootProject.extensions.ext.bundle_version}"
+
     manifest.attributes('Multi-Release': 'true')
+    manifest.attributes('Bundle-Name': 'bcpkix')
+    manifest.attributes('Bundle-SymbolicName': 'bcpkix')
     manifest.attributes('Bundle-RequiredExecutionEnvironment': 'JavaSE-1.8')
-    manifest.attributes('Export-Package': "${packages}")
-    manifest.attributes('Import-Package': "java.*;resolution:=optional,javax.*;resolution:=optional;!${packages},org.bouncycastle.*;version=\"[2.73,2.74)\"")
+    manifest.attributes('Export-Package': "${packages};version=${v}")
+    manifest.attributes('Import-Package': "java.*;resolution:=optional,javax.*;resolution:=optional,!${packages},org.bouncycastle.*;version=\"[${v},${maxVersion})\"")
+    manifest.attributes('Bundle-Version': "${v}")
+    manifest.attributes('Permissions': 'all-permissions')
+    manifest.attributes('Codebase': '*')
+    manifest.attributes('Application-Library-Allowable-Codebase': '*')
+    manifest.attributes('Caller-Allowable-Codebase': '*')
+    manifest.attributes('Trusted-Library': 'true')
 }
 
 task sourcesJar(type: Jar) {
