--- a/tls/build.gradle
+++ b/tls/build.gradle
@@ -63,10 +63,19 @@ jar {
   into('META-INF/versions/9') {
     from sourceSets.java9.output
   }
-  manifest.attributes('Multi-Release': 'true')
-  manifest.attributes('Bundle-RequiredExecutionEnvironment': 'JavaSE-1.8')
-  manifest.attributes('Export-Package': 'org.bouncycastle.{jsse|tls}.*')
-  manifest.attributes('Import-Package': 'java.*;resolution:=optional,javax.*;resolution:=optional,!org.bouncycastle.{jsse|tls}.*;org.bouncycastle.*;version="[2.73,2.74)"')
+  String v = "${rootProject.extensions.ext.bundle_version}"
+      manifest.attributes('Multi-Release': 'true')
+      manifest.attributes('Bundle-Name': 'bctls')
+      manifest.attributes('Bundle-SymbolicName': 'bctls')
+      manifest.attributes('Bundle-RequiredExecutionEnvironment': 'JavaSE-1.8')
+      manifest.attributes('Export-Package': "org.bouncycastle.{jsse|tls}.*;version=${v}")
+      manifest.attributes('Import-Package': "java.*;resolution:=optional,javax.*;resolution:=optional,!org.bouncycastle.{jsse|tls}.*,org.bouncycastle.*;version=\"[${v},${maxVersion})\"")
+      manifest.attributes('Bundle-Version': "${v}")
+      manifest.attributes('Permissions': 'all-permissions')
+      manifest.attributes('Codebase': '*')
+      manifest.attributes('Application-Library-Allowable-Codebase': '*')
+      manifest.attributes('Caller-Allowable-Codebase': '*')
+      manifest.attributes('Trusted-Library': 'true')
 }
 
 task sourcesJar(type: Jar) {
