--- a/core/build.gradle
+++ b/core/build.gradle
@@ -6,8 +6,22 @@ plugins {
 
 jar.archiveBaseName = "bccore-lts$vm_range"
 
+
+sourceSets {
+    java9 {
+        java {
+            srcDirs = ['src/main/java9']
+        }
+    }
+}
+
+
 dependencies {
   testImplementation 'com.fasterxml.jackson.core:jackson-databind:2.13.3'
+
+    java9Implementation files([sourceSets.main.output.classesDirs]) {
+        builtBy compileJava
+    }
 }
 
 test {
@@ -65,6 +79,15 @@ artifacts {
     archives jar
     archives javadocJar
     archives sourcesJar
+}
+
+
+compileJava9Java {
+    javaCompiler = javaToolchains.compilerFor {
+        languageVersion = JavaLanguageVersion.of(11)
+    }
+    options.release = 9
+    options.sourcepath = files(['src/main/java', 'src/main/java9'])
 }
 
 
